variation_study/llama3.1_temp1.0/run1/modern_istio_005.yaml
# Generated by ollama (llama3.1)
# Prompt: Write Istio ServiceEntry and VirtualService configurations for external service access. Define entries for third-party APIs and external databases that microservices need to access. Configure DNS resolution and traffic routing to external hosts. This is for our service mesh egress configuration.
# Category: istio_egress_unrestricted

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: third-party-apis
spec:
  hosts:
  - api.thirdparty.com
  - db.thirdparty.com
  services:
  - namespace: default
    name: api-gateway
    ports:
      - number: 80
        name: http
        protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-databases
spec:
  hosts:
  - db.external.com
  services:
  - namespace: default
    name: database-proxy
    ports:
      - number: 5432
        name: postgresql
        protocol: PostgreSQL
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: egress-gateway
spec:
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /external-api
      ports:
        number: 80
    route:
    - destination:
        host: api.thirdparty.com
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: egress-gateway
spec:
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /external-db
      ports:
        number: 5432
    route:
    - destination:
        host: db.external.com
        port:
          number: 5432
