variation_study/llama3.1_temp1.0/run1/modern_linkerd_001.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: my-destination-rule
spec:
  host: my-host

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-ingress
spec:
  tls:
    - hosts:
        - my-host

---

apiVersion: config.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cluster-local-destination-rule
spec:
  host: "*"
  trafficPolicy:
    loadBalancer:
      simple: {}
    connectionPool:
      tcp:
        maxConnections: 100
